- German time parsing